# ai_voice_assistant

./: .gitignore  Makefile  README.md  pyproject.toml
src/: .env.example  main.py  models.py  transcribe.py  utils.py
src/app/: consts.py  dependencies.py  main.py  settings.py  utils.py
src/app/api/: api.py
src/app/api/endpoints/: whatsapp_message.py
